Table Generator collapse fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ li {
     list-style: none;
 }
 
+table {
+    border-collapse: collapse;
+}
+
 td {
     height: 1rem;
     width: 3.5rem;
